# axvcpu

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: config.json
.github/workflows/: check.yml  ci.yml  deploy.yml  release.yml  test.yml
axvcpu/: all.html  enum.AccessWidth.html  enum.AxVCpuExitReason.html  enum.VCpuState.html  fn.clear_current_vcpu.html  fn.get_current_vcpu.html  fn.get_current_vcpu_mut.html  fn.set_current_vcpu.html  index.html  sidebar-items.js  struct.AxPerCpu.html  struct.AxVCpu.html  struct.AxVCpuInnerMut.html  trait.AxArchPerCpu.html  trait.AxArchVCpu.html  trait.AxVCpuHal.html
axvcpu/arch_vcpu/: trait.AxArchVCpu.html
axvcpu/exit/: enum.AccessWidth.html  enum.AxVCpuExitReason.html
axvcpu/hal/: trait.AxVCpuHal.html
axvcpu/percpu/: struct.AxPerCpu.html  trait.AxArchPerCpu.html
axvcpu/vcpu/: enum.VCpuState.html  fn.clear_current_vcpu.html  fn.get_current_vcpu.html  fn.get_current_vcpu_mut.html  fn.set_current_vcpu.html  struct.AxVCpu.html  struct.AxVCpuInnerMut.html
search.desc/axvcpu/: axvcpu-desc-0-.js
src/: arch_vcpu.rs  exit.rs  hal.rs  lib.rs  percpu.rs  test.rs  vcpu.rs
src/axvcpu/: arch_vcpu.rs.html  exit.rs.html  hal.rs.html  lib.rs.html  percpu.rs.html  test.rs.html  vcpu.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  (+3 more)
(+34 files in other folders)
