[package]
name = "axvcpu"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.2.0"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual CPU abstraction for ArceOS hypervisor"
repository = "https://github.com/arceos-hypervisor/axvcpu"
keywords = ["vcpu", "hypervisor", "arceos"]
license = "Apache-2.0"

[dependencies]
axerrno = "0.1.0"
memory_addr = "0.4"
percpu = "0.2.0"
axaddrspace = "0.2"
axvisor_api = "0.1"
